Multiple changes
Miner Preview smaller to avoid z-fighting

Added HaltReason.java

Use HaltReason in ControllerBaseBE.java and VoidMinerProvider.java

Add MINERS_FILL_ALL_SLOTS config which when true will make the miner only work if it has enough empty slots to fully use the item modifiers
Set to false, it will work continuously, voiding items if all slots are occupied, only stopping when a stack has reached 64 items

Reintroduce MaxStorageUpgradeItem.java to make the tooltip dynamic based on the config